[tool.poetry]
name = "ftrack-connect-plugin-manager"
version = "0.1.6"
description='ftrack Connect plugin for downloading, installing and listing plugins.'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_connect_plugin_manager", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.10"
# TODO: connect is a dependnecy of this package we should add it.
# ftrack-connect = "2.0.0rc1"
ftrack-utils = ">= 2, < 3"
qtawesome = "*"
