[tool.poetry]
name = "ftrack-connect-publisher-widget"
version = "24.7.0rc1"
description='ftrack Connect publisher widget plugin.'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_connect_publisher_widget", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/projects/connect-publisher-widget"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"
ftrack-utils = { version = "^2.0.0", optional = true}

[tool.poetry.group.dev]
optional = true

# TODO: activate this and install using poetry install --with dev if you want to pick dependencies from local
[tool.poetry.group.dev.dependencies]
#ftrack-utils = { path = "../../libs/utils", develop = true }

[tool.poetry.group.testPypi]
optional = true

# TODO: activate this and install using poetry install --with testPypi if you want to pick dependencies from test pypi
[tool.poetry.group.testPypi.dependencies]
#ftrack-utils = { version = "^2.0.0", source = "testpypi" }

[tool.poetry.extras]
ftrack-libs = ["ftrack-utils"]

[tool.black]
line-length = 79
skip-string-normalization = true
