[project]
name = "ftrack-connect-publisher-widget"
version = "26.3.0.dev0"
description = "ftrack Connect publisher widget plugin."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/projects/connect-publisher-widget"

[project.optional-dependencies]
ftrack-libs = [
  "ftrack-utils>=4.0.0, <5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_connect_publisher_widget"]

[tool.uv.sources]
ftrack-utils = { path = "../../libs/utils" }

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
