[tool.poetry]
name = "ftrack-framework-aftereffects"
version = "24.11.0"
description='ftrack After Effects integration'
authors = ["Mykhailo Datsyk <mikedatsik@gmail.com>"]
readme = "README.md"
packages = [{include = "ftrack_framework_aftereffects", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/projects/framework-aftereffects"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">= 3.7, < 3.11"
# ftrack
ftrack-python-api = "^2.5.4"
ftrack-constants = {  version = "^3.0.0", optional = true }
ftrack-utils = {  version = "^3.0.0", optional = true }
ftrack-qt = { version = "^3.0.0", optional = true }
ftrack-qt-style = { version = "^3.0.0", optional = true }
# framework dependencies
ftrack-framework-core = {  version = "^3.0.0", optional = true }
ftrack-framework-qt = {  version = "^3.0.0", optional = true }

[tool.poetry.extras]
ftrack-libs = ["ftrack-constants", "ftrack-utils", "ftrack-qt", "ftrack-qt-style"]
framework-libs = ["ftrack-framework-core", "ftrack-framework-qt"]

[tool.poetry.group.dev]
optional = true

# TODO: activate this and install using poetry install --with dev if you want to pick dependencies from local
[tool.poetry.group.dev.dependencies]
#ftrack-framework-core = { path = "../../libs/framework-core", develop = true }
#ftrack-utils = { path = "../../libs/utils", develop = true }

[tool.poetry.group.testPypi]
optional = true

# TODO: activate this and install using poetry install --with testPypi if you want to pick dependencies from test pypi
[tool.poetry.group.testPypi.dependencies]
#ftrack-utils = {  version = "^2.0.0", source = "testpypi" }
#ftrack-qt = { version = "^2.0.0", source = "testpypi" }
#ftrack-qt-style = { version = "^2.0.0", source = "testpypi" }
#ftrack-framework-core = {  version = "^2.0.0", source = "testpypi" }
#ftrack-framework-qt = {  version = "^2.0.0", source = "testpypi" }

[tool.black]
line-length = 79
skip-string-normalization = true

