[project]
name = "ftrack-framework-common-extensions"
version = "4.0.0"
description = "ftrack Framework common extensions (loader, asset manager, standard pipelines)"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

dependencies = [
  "ftrack-framework-core>=4.0.0, <5.0.0",
  "ftrack-framework-qt>=4.0.0, <5.0.0",
  "ftrack-qt>=4.0.0, <5.0.0",
  "ftrack-constants>=4.0.0, <5.0.0",
  "ftrack-utils>=4.0.0, <5.0.0",
  "clique==1.6.1",
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/projects/framework-common-extensions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
  "source/ftrack_framework_loader",
  "source/ftrack_framework_asset_manager",
]

[tool.uv.sources]
ftrack-constants = { path = "../../libs/constants" }
ftrack-framework-core = { path = "../../libs/framework-core" }
ftrack-framework-qt = { path = "../../libs/framework-qt" }
ftrack-qt = { path = "../../libs/qt" }
ftrack-utils = { path = "../../libs/utils" }

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
