[project]
name = "ftrack-framework-harmony"
version = "26.7.0rc2"
description = "ftrack Harmony integration"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.13, < 3.14"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

dependencies = [
  "ftrack-python-api>=3.1.0, <4.0.0",
  "pyffmpeg>=2.4",
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/projects/framework-harmony"

[project.optional-dependencies]
ftrack-libs = [
  "ftrack-constants>=4.0.0, <5.0.0",
  "ftrack-utils>=4.0.0, <5.0.0",
  "ftrack-qt>=4.0.0, <5.0.0",
  "ftrack-qt-style>=4.0.0, <5.0.0",
]
framework-libs = [
  "ftrack-framework-core>=4.0.0, <5.0.0",
  "ftrack-framework-qt>=4.0.0, <5.0.0",
]
test = [
  "pytest>=8.0,<9",
  "pytest-timeout>=2.3,<3",
  "dcc-test-harness[test]",
  "pyside6>=6.5, <7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_framework_harmony"]

[tool.uv.sources]
ftrack-constants = { path = "../../libs/constants" }
ftrack-framework-core = { path = "../../libs/framework-core" }
ftrack-framework-qt = { path = "../../libs/framework-qt" }
ftrack-qt = { path = "../../libs/qt" }
ftrack-qt-style = { path = "../../libs/qt-style" }
ftrack-utils = { path = "../../libs/utils" }
dcc-test-harness = { path = "../../libs/dcc-test-harness" }
ftrack-connect = { path = "../../apps/connect" }

[tool.uv]
# uv does not apply a path dependency's own tool.uv.sources
# transitively - without this override the harness's ftrack-connect
# dependency would resolve from PyPI.
override-dependencies = [
  "ftrack-connect @ file:///${PROJECT_ROOT}/../../apps/connect",
]

[tool.pytest.ini_options]
addopts = "-v --timeout=300 --dcc-startup-timeout=180"
testpaths = ["tests"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple"
explicit = true

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
