[project]
name = "ftrack-framework-maya-deadline"
version = "0.1.0"
description = "Deadline Cloud extension for ftrack Maya integration"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">= 3.11"
authors = [
  { name = "ftrack Integrations Team", email = "integrations@backlight.co" }
]

dependencies = [
  "ftrack-python-api>=3.1.0, <4.0.0",
  "deadline>=0.49.0",
  "boto3>=1.35.0",
  "xxhash>=3.0.0",
]

[project.urls]
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/projects/framework-maya-deadline"

[project.optional-dependencies]
ftrack-libs = [
  "ftrack-constants>=4.0.0, <5.0.0",
  "ftrack-utils>=4.0.0, <5.0.0",
]
framework-libs = [
  "ftrack-framework-core>=4.0.0, <5.0.0",
]
deadline-extras = [
  "pydantic>=2.0.0",
]
test = [
  "pytest>=8.0,<9",
  "pytest-timeout>=2.3,<3",
  "dcc-test-harness[test]; python_version >= '3.13'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["source/ftrack_framework_maya_deadline"]

[tool.uv.sources]
ftrack-constants = { path = "../../libs/constants" }
ftrack-framework-core = { path = "../../libs/framework-core" }
ftrack-utils = { path = "../../libs/utils" }
dcc-test-harness = { path = "../../../dcc-test-harness" }
ftrack-connect = { path = "../../apps/connect" }

[tool.uv]
override-dependencies = [
  "ftrack-connect @ file:///${PROJECT_ROOT}/../../apps/connect",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"

[tool.pytest.ini_options]
addopts = "-v --timeout=120"
testpaths = ["tests"]

[tool.ruff]
line-length = 79

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
