[tool.poetry]
name = "ftrack-framework-maya"
version = "1.0.0rc1"
description='ftrack Maya integration'
authors = ["ftrack Integrations Team <integrations@backlight.co>"]
readme = "README.md"
packages = [{include = "ftrack_framework_maya", from = "source"}]
license = "Apache-2.0"
homepage = "https://ftrack.com"
repository = "https://github.com/ftrackhq/integrations/tree/main/projects/framework-maya"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
default = false
secondary = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
ftrack-python-api = "^2.5.4"
# ftrack dependnecies
ftrack-constants = { version = "^2.0.0", optional = true }
ftrack-utils = { version = "^2.0.0", optional = true }
# framework dependencies
ftrack-framework-core = { version = "^2.0.0", optional = true }
ftrack-framework-qt = { version = "^2.0.0", optional = true }
ftrack-qt = { version = "^2.0.0", extras = ["pyside"], optional = true}

[tool.poetry.extras]
ftrack-libs = ["ftrack-constants", "ftrack-utils", "ftrack-qt"]
framework-libs = ["ftrack-framework-core", "ftrack-framework-qt"]

[tool.poetry.group.documentation]
optional = true

[tool.poetry.group.documentation.dependencies]
markdown = "<=3.2.2"

[tool.black]
line-length = 79
skip-string-normalization = true

